[gd_scene load_steps=39 format=3 uid="uid://drc4634y48eru"]

[ext_resource type="Script" uid="uid://s3dijjtybwc4" path="res://Scripts/melee_npc.gd" id="1_7kact"]
[ext_resource type="Texture2D" uid="uid://dvt1hcx023to" path="res://Assets/Temporary Sprites/Enemy/Idle (34x28).png" id="1_y1lm4"]
[ext_resource type="Texture2D" uid="uid://ba5txifwmbw7k" path="res://Assets/Temporary Sprites/Enemy/Attack (34x28).png" id="2_vnep2"]
[ext_resource type="Texture2D" uid="uid://mslsjyu1sc4w" path="res://Assets/Temporary Sprites/Enemy/Fall (34x28).png" id="3_7kact"]
[ext_resource type="Texture2D" uid="uid://dh3th8n64bfm0" path="res://Assets/Temporary Sprites/Enemy/Jump (34x28).png" id="4_5yjp6"]
[ext_resource type="Texture2D" uid="uid://cvws0r5f5b3n6" path="res://Assets/Temporary Sprites/Enemy/Run (34x28).png" id="5_0m3t0"]
[ext_resource type="PackedScene" uid="uid://venuja04yfma" path="res://Scenes/Components/health_component.tscn" id="6_oo8tb"]
[ext_resource type="PackedScene" uid="uid://dxqmf65e6r3da" path="res://Scenes/Components/hitbox_component.tscn" id="7_vhtkc"]
[ext_resource type="PackedScene" uid="uid://bd0qsb7ge2fcc" path="res://Scenes/Components/search_component.tscn" id="9_5yjp6"]
[ext_resource type="PackedScene" uid="uid://bx6di2dykeke7" path="res://Scenes/Components/interaction_component.tscn" id="10_5yjp6"]
[ext_resource type="PackedScene" uid="uid://blpg874rq6jfb" path="res://Scenes/Components/damage_component.tscn" id="11_0m3t0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ah1cv"]
atlas = ExtResource("1_y1lm4")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewa3w"]
atlas = ExtResource("1_y1lm4")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2gvc"]
atlas = ExtResource("1_y1lm4")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ls7i"]
atlas = ExtResource("1_y1lm4")
region = Rect2(204, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_etlg8"]
atlas = ExtResource("1_y1lm4")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8j46"]
atlas = ExtResource("1_y1lm4")
region = Rect2(272, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sk1d"]
atlas = ExtResource("1_y1lm4")
region = Rect2(306, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vi2f"]
atlas = ExtResource("1_y1lm4")
region = Rect2(340, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v3kn"]
atlas = ExtResource("2_vnep2")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pnma"]
atlas = ExtResource("2_vnep2")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_rugm4"]
atlas = ExtResource("2_vnep2")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5qij"]
atlas = ExtResource("2_vnep2")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufnxq"]
atlas = ExtResource("2_vnep2")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqr32"]
atlas = ExtResource("3_7kact")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_we1rl"]
atlas = ExtResource("4_5yjp6")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_03ha0"]
atlas = ExtResource("5_0m3t0")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh2wa"]
atlas = ExtResource("5_0m3t0")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_d54c4"]
atlas = ExtResource("5_0m3t0")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_poit3"]
atlas = ExtResource("5_0m3t0")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jag68"]
atlas = ExtResource("5_0m3t0")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7dfb"]
atlas = ExtResource("5_0m3t0")
region = Rect2(170, 0, 34, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdc67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah1cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewa3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2gvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ls7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etlg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8j46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sk1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vi2f")
}],
"loop": true,
"name": &"IDLE",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v3kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pnma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rugm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5qij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufnxq")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqr32")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_we1rl")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03ha0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh2wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d54c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poit3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jag68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7dfb")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_75pek"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bv611"]
radius = 13.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_7kact"]
radius = 122.589

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5yjp6"]
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oo8tb"]
radius = 10.198

[node name="MeleeNPC" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_7kact")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_vdc67")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_75pek")

[node name="HealthComponent" parent="." instance=ExtResource("6_oo8tb")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("7_vhtkc")]
collision_layer = 2
collision_mask = 0
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_bv611")

[node name="SearchComponent" parent="." instance=ExtResource("9_5yjp6")]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchComponent"]
shape = SubResource("CircleShape2D_7kact")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="InteractionComponent" parent="." instance=ExtResource("10_5yjp6")]
position = Vector2(-10, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent"]
shape = SubResource("CapsuleShape2D_5yjp6")

[node name="DamageComponent" parent="." instance=ExtResource("11_0m3t0")]
position = Vector2(-12, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageComponent"]
shape = SubResource("CircleShape2D_oo8tb")

[node name="DisableDamageComponent" type="Timer" parent="."]

[connection signal="found" from="SearchComponent" to="." method="_on_search_component_found"]
[connection signal="body_entered" from="InteractionComponent" to="." method="_on_interaction_component_body_entered"]
[connection signal="body_exited" from="InteractionComponent" to="." method="_on_interaction_component_body_exited"]
[connection signal="timeout" from="DisableDamageComponent" to="." method="_on_disable_damage_component_timeout"]
